--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,1 +1,8 @@
 <h1><%= @user.username %></h1>
+<a href='/post'>Make a Post</a></br>
+<a href='/message'>Send a Message</a>
+<% @feed.each do |post| %>
+    </br>
+    <h2><%= User.find(post.user_id).username %></h2>
+    <p><%= post.content %></p>
+<% end %>
