--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,5 +1,5 @@
 <form method='post' action='/login'>
 <p>Username or Email: <input type='text' name='info'></p>
-<p>Password: <input type='text' name='password'</p>
+<p>Password: <input type='password' name='password'</p>
 <p><input type='submit'></p>
 </form>
