--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,6 +1,6 @@
 <form method='post' action='/signup'>
 <p>Email: <input type='text' name='email'></p>
 <p>Username: <input type='text' name='username'></p>
-<p>Password: <input type='text' name='password'></p>
+<p>Password: <input type='password' name='password'></p>
 <input type='submit'>
 </form>
