Added user log out from homepage

--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -6,3 +6,5 @@
     <h2><%= User.find(post.user_id).username %></h2>
     <p><%= post.content %></p>
 <% end %>
+<br>
+<a href='/logout'>Log Out</a>
