--- a/app/views/post.erb
+++ b/app/views/post.erb
@@ -1,3 +1,4 @@
+<a href='/home'>Home</a></br>
 <form method='post' action='/post'>
 <p>Content: <input type='text' name='content'></p>
 <input type='submit' value='Post!'>
