Fixed error to allow users to log in with either username or email

--- a/app/views/failure.erb
+++ b/app/views/failure.erb
@@ -1,4 +1,2 @@
-<form method='post' action='/'>
-<h1>Something fucked up</h1>
-<input type='submit' value='Okay then...'>
-</form>
+<h1>Something messed up</h1>
+<a href='/'>Ok then...</.a>
